# thesis-prj

./: .gitignore  .gitmodules  CMakeLists.txt
src/: CMakeLists.txt  bound_actuation.cpp  constraints.hpp  forces.hpp  grid.cpp  grid.hpp  param_distance3.hpp  picking_color.cpp  picking_select.cpp  seg_sphere_test.cpp
src/framework/: app.cpp  app.hpp  debug.cpp  debug.hpp  input.cpp  input.hpp
